
The 'pick' plugin has been abolished.  All the logic formerly done there
is now built into the server, where it can be done much more
efficiently.

A bug where removing a collection (from the configuration) could cause a
crash when random play was enabled has been fixed.

A new configuration option 'queue_pad' allows the number of random
tracks kept on the queue to be controlled.

** Network Play

DisOrder can broadcast audio over a network, allowing it to be played on
multiple client machines.  See README.streams for details.

** disorderfm

There is a new command line tool called 'disorderfm' which is designed
for filename translation on (for instance) digital audio repositories.
It is not yet feature-complete.  See its man page for additional
details.

** Build And Configuration

You can control which components are built with new --with options.  See
README.

options.transform and the 'transform' web option have gone, replaced
with a 'transform' configuration command.  Both this and 'namepart' are
now optional.

** Thanks

Ross Younger, Colin Watson, Michael Stevens and Mark Wooding all
contributed in some way to this release.

* Changes up to version 1.5.1

** Web Interface

Correct regexp for non-alpha tracks.

* Changes up to version 1.5

** Web Interface

Regexp-based filtering of tracks (for instance as used by the initial
'Choose' page) now does the regexp matching in the server, limiting the
amount of data transferred to the web interface only to be discarded.

** Client

Regexp-base filtering of tracks is now available to the command line
client.

** Server

New server_nice, speaker_nice and rescan_nice configuration options
allow independent control of process priorities.

Scratches are now attributed to the user who requested them.

Bugs fixed:
  A file descriptor was leaked for each track played.
  The amount of a track played so far was not reported.
  The speaker process could crash on underrun.