@@ -1,7 +1,7 @@
 # player programs
 player *.mp3 execraw disorder-decode
 player *.ogg execraw disorder-decode
-player *.wav shell play
+player *.wav execraw disorder-decode
 
 # don't leave a gap between tracks
 gap 0
